Applet: fix crash after a widget is removed or disabled

In the connection with `QObject::destroyed`, there is no need to delete
an action again, otherwise there is a double delete.

BUG: 472892
FIXED-IN: 6.0